--- a/app/views/web/stories/_form.html.haml
+++ b/app/views/web/stories/_form.html.haml
@@ -2,5 +2,8 @@
   = f.error_notification
   = f.input :body, :input_html => { :cols => 80, :rows => 3 }, label: "Story"
   = f.association :user, label: "Assigned with"
+  = f.input :state, collection: Story.states
   .form-actions
     = f.button :submit, class: "btn-primary"
+    -unless @story.new_record?
+      =render partial: 'story_state', locals: {story: @story}
