--- a/app/views/web/stories/index.html.haml
+++ b/app/views/web/stories/index.html.haml
@@ -13,6 +13,9 @@
         %td
           =story.user.name if story.user
         %td
-          none
+          -if signed_in?
+            =render partial: 'story_state', locals: {story: story}
+          -else
+            =story.state
         %td
           =story.comments.count
