--- a/app/views/web/stories/show.html.haml
+++ b/app/views/web/stories/show.html.haml
@@ -1,1 +1,14 @@
-=render "form"
+%h1 подробнее
+-if signed_in?
+  =render "form"
+-else
+  %dl.dl-horizontal
+    %dt номер
+    %dd=@story.id
+    %dt story
+    %dd=@story.body
+    %dt назначена
+    %dd=story_assigned
+    %dt статус
+    %dd=@story.state
+
