--- a/app/views/web/stories/show.html.haml
+++ b/app/views/web/stories/show.html.haml
@@ -1,6 +1,8 @@
 %h1 подробнее
 -if signed_in?
   =render "form"
+  -# =render "comments"
+  =render "add_comment"
 -else
   %dl.dl-horizontal
     %dt номер
