--- a/app/views/web/stories/_form.html.haml
+++ b/app/views/web/stories/_form.html.haml
@@ -1,6 +1,6 @@
-= simple_form_for @story, :html => { :class => 'form-horizontal' } do |f|
+= simple_form_for @story, html: { class: 'form-horizontal' } do |f|
   = f.error_notification
-  = f.input :body, :input_html => { :cols => 80, :rows => 3 }, label: "Story"
+  = f.input :body, input_html: { cols: 80, rows: 3 }, label: "Story"
   = f.association :user, label: "Assigned with"
   .form-actions
     = f.button :submit, class: "btn-primary"
