--- a/app/views/web/stories/index.html.haml
+++ b/app/views/web/stories/index.html.haml
@@ -6,6 +6,12 @@
       %th Action
       %th Comments
   %tbody
+    %tr
+      =simple_form_for :story, url: stories_path, method: :get do |f|
+        %th
+        %th=f.input :user, collection: User.all, selected: selected_field(params[:story], :user), include_blank: true, label: false
+        %th=f.input :state, as: :story_states, selected: selected_field(params[:story], :state), label: false, include_blank: true
+        %th=f.submit 'filter', class: 'btn btn-small'
     - @stories.each do |story|
       %tr
         %td
