--- a/app/views/web/stories/_form.html.haml
+++ b/app/views/web/stories/_form.html.haml
@@ -2,7 +2,9 @@
   = f.error_notification
   = f.input :body, input_html: { cols: 80, rows: 3 }, label: "Story"
   = f.association :user, label: "Assigned with"
+  -unless @story.new_record?
+    .control-group
+      = f.label "status"
+      .controls= render partial: 'story_state', locals: {story: @story}
   .form-actions
     = f.button :submit, class: "btn-primary"
-    -unless @story.new_record?
-      =render partial: 'story_state', locals: {story: @story}
