--- a/app/views/web/stories/_story_state.html.haml
+++ b/app/views/web/stories/_story_state.html.haml
@@ -1,5 +1,7 @@
 -if signed_in? and story.state_events.any?
   -story.state_events.each do |ev|
-    =link_to ev, story_event_path(story.id, ev), method: :post, class: "btn #{ev} #{bstrp_btn(ev)}"
+    = form_for ev, as: :post, url: story_event_path(story) do |f|
+      = hidden_field_tag :event, ev
+      = f.submit ev, class: "btn #{ev} #{bstrp_btn(ev)}"
 -else
   =story.human_state_name
