fix test & fix saving filtering opts

--- a/app/views/web/stories/_story_state.html.haml
+++ b/app/views/web/stories/_story_state.html.haml
@@ -1,6 +1,6 @@
 -if signed_in? and story.state_events.any?
   -story.state_events.each do |ev|
-    = form_for ev, as: :post, url: story_event_path(story) do |f|
+    = form_for ev, as: :post, url: story_event_path(story, params) do |f|
       = hidden_field_tag :event, ev
       = f.submit ev, class: "btn #{ev} #{bstrp_btn(ev)}"
 -else
