--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,15 +9,15 @@
   %body
     .navbar
       .container
-        %h3=link_to "Simple Task Manager", root_path, class: "brand"
+        %h3=link_to "Simple Task Manager", root_with_locale_path, class: "brand"
         .nav-collapse.collapse.pull-right
           %ul.nav
             -if signed_in?
               %li=link_to current_user.name, user_path(current_user)
-              %li=link_to 'Выйти', session_path, method: :delete
+              %li=link_to t('.signout'), session_path, method: :delete
             -else
-              %li= link_to "Sign up", new_user_path
-              %li=link_to "Sign in", new_session_path
+              %li= link_to t('.signup'), new_user_path
+              %li=link_to t('.signin'), new_session_path
     .container
       = flash_block
       = render 'layouts/tabs'
