--- a/app/views/web/stories/show.html.haml
+++ b/app/views/web/stories/show.html.haml
@@ -1,17 +1,17 @@
-%h3 подробнее
+%h3=t('.show')
 %dl.dl-horizontal
-  %dt номер
+  %dt=Story.human_attribute_name(:id)
   %dd=@story.id
-  %dt story
+  %dt=Story.human_attribute_name(:body)
   %dd=@story.body
-  %dt назначена
+  %dt=Story.human_attribute_name(:user)
   %dd=story_assigned
-  %dt статус
+  %dt=Story.human_attribute_name(:state)
   %dd=render partial: 'story_state', locals: {story: @story}
-=link_to "add comment", new_story_comment_path(story_id: @story), class: "btn btn-large btn-primary disabled"
-=link_to "edit story", edit_story_path, class: "btn btn-large disabled"
+=link_to t('.add_comment'), new_story_comment_path(story_id: @story), class: "btn btn-large btn-primary disabled"
+=link_to t('.edit'), [:edit, @story], class: "btn btn-large disabled"
 %p
-%h4 Comments:
+%h4=Story.human_attribute_name(:comments)
 %dl.dl-horizontal
   =render partial: "web/comments/comment", collection: @comments
 
