--- a/app/views/web/welcome/index.html.haml
+++ b/app/views/web/welcome/index.html.haml
@@ -3,6 +3,7 @@
     %title Choose locale | SimpleTaskManager
     = stylesheet_link_tag    "application", :media => "all"
   %body.container
+    = flash_block
     %ul
       %li=link_to 'ru', stories_path(locale: :ru)
       %li=link_to 'en', stories_path(locale: :en)
